--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         .float-animation {
             animation: subtle-float 3s ease-in-out infinite;
         }
+        @keyframes shimmer {
+            0% { background-position: -200% 0; }
+            100% { background-position: 200% 0; }
+        }
+        .animate-shimmer {
+            background-size: 200% 100%;
+            animation: shimmer 1.5s infinite linear;
+        }
         .gesture-bar {
             position: fixed;
             bottom: 8px;
