--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #f1f5f9;
+            background-color: #f8fafc;
             user-select: none;
             -webkit-tap-highlight-color: transparent;
             overscroll-behavior-y: contain;
@@ -42,6 +42,10 @@
         .float-animation {
             animation: subtle-float 3s ease-in-out infinite;
         }
+        @keyframes spin {
+            from { transform: translate(-50%, -50%) rotate(0deg); }
+            to { transform: translate(-50%, -50%) rotate(360deg); }
+        }
         @keyframes shimmer {
             0% { background-position: -200% 0; }
             100% { background-position: 200% 0; }
@@ -57,7 +61,7 @@
             transform: translateX(-50%);
             width: 120px;
             height: 5px;
-            background: rgba(0,0,0,0.1);
+            background: rgba(0,0,0,0.05);
             border-radius: 10px;
             z-index: 9999;
             pointer-events: none;
@@ -75,7 +79,7 @@
 }
 </script>
 </head>
-<body class="antialiased text-slate-900">
+<body class="antialiased text-slate-900 overflow-hidden">
     <div id="root"></div>
     <div class="gesture-bar"></div>
 </body>
