--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <meta name="theme-color" content="#4f46e5">
     <title>Nexus</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Plus Jakarta Sans', 'sans-serif'],
+            },
+          },
+        },
+      }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         body {
@@ -17,6 +29,10 @@
             user-select: none;
             -webkit-tap-highlight-color: transparent;
             overscroll-behavior-y: contain;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+        .dark body {
+            background-color: #020617;
         }
         .hide-scrollbar::-webkit-scrollbar {
             display: none;
@@ -30,6 +46,10 @@
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
             border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        }
+        .dark .glass {
+            background: rgba(15, 23, 42, 0.75);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
         }
         .squircle {
             border-radius: 24px;
@@ -66,6 +86,9 @@
             z-index: 9999;
             pointer-events: none;
         }
+        .dark .gesture-bar {
+            background: rgba(255,255,255,0.1);
+        }
     </style>
 <script type="importmap">
 {
@@ -79,7 +102,7 @@
 }
 </script>
 </head>
-<body class="antialiased text-slate-900 overflow-hidden">
+<body class="antialiased text-slate-900 dark:text-slate-100 overflow-hidden">
     <div id="root"></div>
     <div class="gesture-bar"></div>
 </body>
