--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#4f46e5">
-    <title>Nexus</title>
+    <title>Nexus - Campus Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -17,6 +17,16 @@
             fontFamily: {
               sans: ['Plus Jakarta Sans', 'sans-serif'],
             },
+            animation: {
+              'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'bounce-subtle': 'bounce-subtle 2s infinite',
+            },
+            keyframes: {
+              'bounce-subtle': {
+                '0%, 100%': { transform: 'translateY(-5%)' },
+                '50%': { transform: 'translateY(0)' },
+              }
+            }
           },
         },
       }
@@ -42,37 +52,28 @@
             scrollbar-width: none;
         }
         .glass {
-            background: rgba(255, 255, 255, 0.75);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
         .dark .glass {
-            background: rgba(15, 23, 42, 0.75);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+            background: rgba(15, 23, 42, 0.7);
+            border: 1px solid rgba(255, 255, 255, 0.05);
         }
-        .squircle {
-            border-radius: 24px;
+        .perspective-1000 {
+            perspective: 1000px;
         }
-        @keyframes subtle-float {
-            0% { transform: translateY(0px); }
-            50% { transform: translateY(-5px); }
-            100% { transform: translateY(0px); }
+        .rotate-x-2 {
+            transform: rotateX(2deg);
         }
-        .float-animation {
-            animation: subtle-float 3s ease-in-out infinite;
+        @keyframes float {
+            0% { transform: translateY(0px) rotate(0deg); }
+            50% { transform: translateY(-10px) rotate(1deg); }
+            100% { transform: translateY(0px) rotate(0deg); }
         }
-        @keyframes spin {
-            from { transform: translate(-50%, -50%) rotate(0deg); }
-            to { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-        @keyframes shimmer {
-            0% { background-position: -200% 0; }
-            100% { background-position: 200% 0; }
-        }
-        .animate-shimmer {
-            background-size: 200% 100%;
-            animation: shimmer 1.5s infinite linear;
+        .float-node {
+            animation: float 4s ease-in-out infinite;
         }
         .gesture-bar {
             position: fixed;
@@ -81,13 +82,20 @@
             transform: translateX(-50%);
             width: 120px;
             height: 5px;
-            background: rgba(0,0,0,0.05);
+            background: rgba(0,0,0,0.1);
             border-radius: 10px;
             z-index: 9999;
             pointer-events: none;
         }
         .dark .gesture-bar {
             background: rgba(255,255,255,0.1);
+        }
+        /* Mobile Safe Area Padding */
+        .safe-pb {
+            padding-bottom: env(safe-area-inset-bottom);
+        }
+        .safe-pt {
+            padding-top: env(safe-area-inset-top);
         }
     </style>
 <script type="importmap">
