feat: Implement client-side SQLite for data persistence
Integrates sql.js to provide client-side SQLite database functionality. This enables offline data access and persistence, acting as a fallback when the backend API is unavailable.

Changes include:
- Adding sql.js CDN to `index.html`.
- Initializing SQLite in `App.tsx` and fetching data from it.
- Refactoring `api.ts` to use SQLite queries for product data.
- Creating `services/database.ts` for SQLite initialization, schema creation, query execution, and data persistence to local storage.
- Adding database import/export functionality to `SettingsView.tsx`.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#4f46e5">
     <title>Nexus - Campus Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.12.0/sql-wasm.min.js"></script>
     <script>
       tailwind.config = {
         darkMode: 'class',
